feat: Enhance GUI with auto-refresh functionality and file watching for logs and stats